<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:id="@+id/title_text"
        android:text="@string/title_text"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/start_button"
        android:layout_height="wrap_content"
        android:text="@string/start_button" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/character_button"
        android:layout_height="wrap_content"
        android:text="@string/character_button" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/clear_button"
        android:layout_height="wrap_content"
        android:text="@string/clear_button" />

</LinearLayout>