<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_name"
        android:layout_toRightOf="@+id/name_header" />

    <TextView
        android:text="@string/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level_header"
        android:layout_below="@+id/name_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_level"
        android:layout_toRightOf="@+id/level_header"
        android:layout_below="@+id/item_name" />

    <TextView
        android:text="@string/intellect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/int_header"
        android:layout_below="@+id/level_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_intellect"
        android:layout_below="@+id/item_level"
        android:layout_toRightOf="@+id/int_header" />

    <TextView
        android:text="@string/vitality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vit_header"
        android:layout_below="@+id/int_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_vitality"
        android:layout_below="@+id/item_intellect"
        android:layout_toRightOf="@+id/vit_header" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inventory"
        android:id="@+id/inventory_button"
        android:layout_toRightOf="@+id/home_button"
        android:layout_below="@+id/equip_item" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        android:id="@+id/home_button"
        android:layout_below="@+id/equip_item" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Equip"
            android:id="@+id/equip_item"
            android:layout_below="@+id/vit_header"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>

</LinearLayout>